Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changes since 1.8.0

Additions

- Added convenience method for creating CCR elements from NSXMLElements.

Changes

Bugs Fixed


Release 1.8.0
24-July-2009
Changes since 1.7.0

Additions

- Added support for Google Analytics API

- Added support for Google Maps Data API

- Added classes for Blogger Data API

- Added support for Spreadsheets API version 3 with table and record feeds

- Added support for Contacts API version 3

- Added new classes for Webmaster Tools API

- Added Geo accessor to Calendar API event entries

- Added Calendar settings feed

- Added YouTube CaptionTrack feed

- Added Health example app

- Added batch call to Docs API

- Added "next" link and category accessors to Health profile entries

- Added album creation to photos sample app

- Added removeChild method to GDataXMLElement

- Added query convenience method addCategoryFilterWithScheme:term: and
  filter methods addCategoryWithScheme:term: and
  addExcludeCategoryWithScheme:term:
  
- Added spam and aspectRatio elements to YouTube API

- Added a nodesForXPath: method that allows explicit namespace declarations,
  and provided access to the default namespace in XPath expressions
  (thanks berbie)

Changes

- Fetch callbacks now have a single selector rather than separate success
  and failure methods

- Most service-specific fetch calls have been removed; clients should use
  the fetch calls in GDataServiceGoogle and GDataServiceGoogleBase

- Tightened URL encoding rules so portions of feed URLs are more strictly
  percent-encoded
  
- Docs sample app now downloads docs by exporting as text files

- Photos API now makes version 2 API requests

- Renamed newSubscriptionVideosFeedLink to recentSubscriptionVideosFeedLink to
  make the static analyzer happier
  